<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_bt">Поиск</string>
    <string name="media_bt">Медиатека</string>
    <string name="settings_bt">Настройки</string>

    <string name="search_bt_desc">Поиск исполнителя или трека</string>
    <string name="media_bt_desc">Открыть медиатеку</string>
    <string name="settings_bt_desc">Открыть настройки</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share_bt">Поделиться приложением</string>
    <string name="support_bt">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_bt_desc">Поделиться приложением</string>
    <string name="support_bt_desc">Написать в поддержку</string>
    <string name="user_agreement_desc">Пользовательское соглашение</string>

    <string name="share_app_msg">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="support_email">fooco800@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_offer">https://yandex.ru/legal/practicum_offer/</string>

    <string name="search_text">Поиск</string>
    <string name="search_autofillhint">track/artist</string>
    <string name="clear_input">Очистить ввод</string>

    <string name="track_cover">Обложка трека</string>
    <string name="track_select">Перейти к треку</string>

    <string name="nothings_found">Ничего не нашлось</string>
    <string name="smth_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="no_network_connection">Отсутствует подключение к интернету</string>

    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>

    <string name="country_title">Страна</string>
    <string name="genre_title">Жанр</string>
    <string name="year_title">Год</string>
    <string name="album_title">Альбом</string>
    <string name="duration_title">Длительность</string>

    <string name="add_btn_desc">Добавить трек в плейлист</string>
    <string name="play_btn_desc">Воспроизвести</string>
    <string name="cover_ph_desc">Обложка трека</string>
    <string name="add_to_fav_btn_desc">Добавить трек в любимые</string>

    <string name="track_timer_ph">00:00</string>
    <string name="no_data">Нет данных</string>
    <string name="playing_error">Не удалось воспроизвести</string>

    <string name="media_text">Медиатека</string>
    <string name="no_playlists">Вы не создали\n\ни одного плейлиста</string>
    <string name="no_favourites">Ваша медиатека пуста</string>
    <string name="favourites_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_cover_ph">Обложка плейлиста</string>
    <string name="playlist_title">Название*</string>
    <string name="playlist_desc">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="completion_playlist">Завершить создание плейлиста?</string>
    <string name="comletion_warning">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="playlist_created">Плейлист %1$s создан</string>

    <string name="track_exists">Трек уже добавлен в плейлист %1$s</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>

    <string name="tracks_count_single">%1$d трек</string>
    <string name="tracks_count_few">%1$d трека</string>
    <string name="tracks_count_many">%1$d треков</string>

    <string name="minute_count_single">%1$d минута</string>
    <string name="minutes_count_few">%1$d минуты</string>
    <string name="minutes_count_many">%1$d минут</string>

    <string name="permissions_granted">Разрешение предоставлено</string>
    <string name="permissions_denied">Разрешение отклонено</string>
    
    <string name="ph_playlist_title">Название плейлиста</string>
    <string name="ph_playlist_desc">Описание плейлиста</string>

    <string name="dialog_delete_track">Хотите удалить трек?</string>
    <string name="dialog_yes">ДА</string>
    <string name="dialog_no">НЕТ</string>

    <string name="pl_share_btn">Поделиться</string>
    <string name="pl_edit_info">Редактировать информацию</string>
    <string name="pl_delete_playlist">Удалить плейлист</string>
    <string name="empty_playlist_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="dialog_delete_playlist">Хотите удалить плейлист "%1$s"?</string>
    <string name="empty_playlist">В этом плейлисте нет треков</string>

    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="menu">Меню</string>

    <string name="notification_channel_desc">Channel for playing music</string>
    <string name="denied_permission_fg_player_service">Нет прав на воспроизведение в фоне</string>
</resources>