<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.playlistmaker.media.ui.FragmentCreatePlaylist">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIconTint="@color/settings_screen_toolbar"
        app:navigationIcon="@drawable/arrow_back_icon">

        <TextView
            android:text="@string/new_playlist"
            style="@style/ToolBarTitle"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/coverPlaylist"
        android:layout_width="@dimen/playlist_cover_create"
        android:layout_height="@dimen/playlist_cover_create"
        android:layout_marginTop="26dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
        android:scaleType="centerCrop"
        android:contentDescription="@string/playlist_cover_ph"
        android:clickable="true"
        android:src="@drawable/add_photo_rect" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTitle"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:hint="@string/playlist_title"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coverPlaylist">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_playlist_title"
            style="@style/EditTextPlaylistStyle"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDesc"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/playlist_desc"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_playlist_desc"
            style="@style/EditTextPlaylistStyle"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_btn"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/create_playlist"
        android:backgroundTint="@drawable/button_color_selector"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>