<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/settings_screen_bg">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIconTint="@color/settings_screen_toolbar"
        app:navigationIcon="@drawable/arrow_back_icon">

        <TextView
            android:text="@string/search_text"
            style="@style/ToolBarTitle"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_search_bg"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_edit_text"
            style="@style/SettingsTextViewForButton"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:padding="15dp"
            android:drawableStart="@drawable/search_icon16"
            android:drawablePadding="8dp"
            android:hint="@string/search_text"
            android:autofillHints="@string/search_autofillhint"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:background="@android:color/transparent"
            android:maxLines="1"
            android:maxLength="30"
            android:inputType="text"/>

        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/clear_input"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>